--- a/WebContent/WEB-INF/classes/MessageResources.properties
+++ b/WebContent/WEB-INF/classes/MessageResources.properties
@@ -46,4 +46,4 @@ welcome.message=To get started on your own application, copy the struts-blank.wa
 button.submit=Submit
 button.ok=OK
 # -- field --
-field.userName=name
+field.userName=Name
